--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ media
 
 # Backup files # 
 *.bak 
-
+p
 # If you are using PyCharm # 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -135,3 +135,4 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+.gitignore
